--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <h1> poojashree</h1>
     
   </div>
-  <p>assistant professor </p>
+  <p> UG Student </p>
   <input type="file" id="fileInput" accept="image/*" style="display:none">
   <button onclick="showModal()">Change Profile</button>
 </header>
